Add Facebook Audience pixel

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
   </script>
   <!-- A/B Testing -->
   <script src="//load.sumome.com/" data-sumo-site-id="08202171dba54b85d3b9e49e52e4d79c69e3cbd8eb22d5381f2002dbf2de8be5" async="async"></script>
+  <%= render partial: "layouts/social/facebook_pixel" %>
 </head>
 <body<% if user_signed_in? %> account-body data-no-turbolink="true"<% end %>>
   <div class="navbar navbar-default navbar-static-top">
